[tool.poetry]
name = "paradex_py"
version = "0.0.1"
description = "Paradex Python SDK"
authors = ["Paradex <finfo@paradex.trade>"]
repository = "https://github.com/tradeparadex/paradex-py"
documentation = "https://tradeparadex.github.io/paradex-py/"
readme = "README.md"
packages = [
  {include = "paradex_py"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
starknet-py = "^0.18.3"
aiohttp = "^3.9.1"
marshmallow-dataclass = "8.4.2"
eth-account = "^0.10.0"
web3 = "^6.11.4"
starknet-crypto-py = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-asyncio = "^0.23.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["paradex_py"]
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
show_error_codes = true
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "starknet_py.*",
    "starkware.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["paradex_py"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
