[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add project metadata for PEP 621 needed for building
[project]
name = "paradex_py"
version = "0.5.0rc0"
description = "Paradex Python SDK"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Paradex", email = "finfo@paradex.trade" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "starknet-py>=0.27.0,<0.28.0",
    "marshmallow-dataclass>=8.6.1,<9.0.0",
    "eth-account>=0.11.0,<0.12.0",
    "web3>=6.19.0,<7.0.0",
    "starknet-crypto-py>=0.2.0,<0.3.0",
    "httpx>=0.27.0,<0.28.0",
    "websockets>=15.0,<16.0",
    "ledgereth>=0.9.1,<0.10.0",
    "pydantic>=2.0.0,<3.0.0",
    "poseidon-py>=0.1.0,<0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/tradeparadex/paradex-py"
"Repository" = "https://github.com/tradeparadex/paradex-py"
"Documentation" = "https://tradeparadex.github.io/paradex-py/"

# Add dependency groups for development dependencies (PEP 735)
[dependency-groups]
dev = [
    "pytest>=8.0.2,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "deptry>=0.12.0,<0.13.0",
    "mypy>=1.5.1,<2.0.0",
    "pre-commit>=3.4.0,<4.0.0",
    "tox>=4.11.1,<5.0.0",
    "mkdocs==1.6.0",
    "mkdocs-material==9.5.25",
    "mkdocstrings[python]==0.24.3",
    "mkdocs-autorefs==1.0.1",
    "griffe==0.45.2",
    "hatchling==1.27.0",
    "datamodel-code-generator>=0.30.1",
    "pytest-asyncio>=1.1.0",
]

[tool.black]
line-length = 120
target-version = ['py310']
preview = true

[tool.mypy]
files = ["paradex_py"]
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
show_error_codes = true
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "starknet_py.*",
    "starkware.*",
    "poseidon_py.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration/test_block_trades_workflow.py"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["paradex_py"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"paradex_py/api/generated/*" = ["F403", "A003", "S105", "UP006"]
